Update item list for ds3

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Dark Souls Challenge Run Generator</title>
+	<title>Dark Souls 3 Challenge Run Generator</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
@@ -126,7 +126,7 @@
 	<div class="page">
 		<div class="row">
 			<div id="content" class="large-12 columns">
-				<h1>Dark Souls Challenge Run Generator</h1>
+				<h1>Dark Souls 3 Challenge Run Generator</h1>
 
 				<div id="toggleMods" class="small button">Show/Hide Modifiers</div>
 				<div id="modifiers" class="row" style="display:none">
