--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
 		</div>
 	<div>
 
-	<footer>
-		<a href="https://github.com/ianlamb/darksouls-challenges/releases" target="_blank">Release Notes</a>
-	</footer>
+	<!--<footer>-->
+		<!--<a href="https://github.com/Emendiel/darksouls-challenges/releases" target="_blank">Release Notes</a>-->
+	<!--</footer>-->
 
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
